[package]
name = "royalroad"
version = "0.1.0"
edition = "2024"

[dependencies]
buny = { git = "https://github.com/BunyApp/buny-rs.git", features = ["json"], version = "0.1.0" }
serde = { version = "1.0.188", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.105", default-features = false, features = ["alloc"] }

[dev-dependencies]
buny = { git = "https://github.com/BunyApp/buny-rs.git", features = ["test"] }
buny-test = { git = "https://github.com/BunyApp/buny-rs.git", version = "1" }


[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true

[lints.clippy]
unnecessary_filter_map = "allow"
