[package]
name = "madtheme"
version = "0.1.0"
edition = "2024"

[dependencies]
buny = { git = "https://github.com/BunyApp/buny-rs.git", version = "0.1.0", features = ["json"] }

[dev-dependencies]
buny = { git = "https://github.com/BunyApp/buny-rs.git", features = ["test"] }
buny-test = { git = "https://github.com/BunyApp/buny-rs.git" }